[workspace]
resolver = "2"

members = [
    "relay",
    "relay-client",
    "relay-core",
    "relay-http",
    "relay-postgres",
]

[workspace.package]
edition = "2021"
authors = ["Dean Karn"]
description = "A simple no-nonsense job runner"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"

[workspace.dependencies]
tokio = { version = "1.33.0", default-features = false }
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = "1.0.192"
serde_json = "1.0.108"
tracing = "0.1.40"
metrics = "0.21.1"
metrics-util = "0.15.1"
chrono = "0.4.31"
backoff-rs = "0.1.0"
anydate = "0.3.0"
log = "0.4.20"
uuid = { version = "1.5.0" }
percent-encoding = "2.3.0"
async-channel = "2.1.0"
relay-core = { version = "*", path = "./relay-core" }
num_cpus = "1.16.0"
async-trait = { version = "0.1.74" }

[profile.release]
lto = true
strip = true
codegen-units = 1
