[workspace]
resolver = "2"

members = [
    "relay",
    "relay-client",
    "relay-core",
    "relay-http",
    "relay-postgres",
]

[workspace.package]
edition = "2021"
authors = ["Dean Karn"]
description = "A simple no-nonsense job runner"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"

[workspace.dependencies]
tokio = { version = "1.36.0", default-features = false }
anyhow = "1.0.81"
thiserror = "1.0.58"
serde = "1.0.197"
serde_json = "1.0.115"
tracing = "0.1.40"
metrics = "0.22.3"
metrics-util = "0.16.3"
chrono = "0.4.37"
backoff-rs = "0.1.0"
anydate = "0.4.0"
log = "0.4.21"
uuid = { version = "1.8.0" }
percent-encoding = "2.3.1"
async-channel = "2.2.0"
relay-core = { version = "*", path = "./relay-core" }
num_cpus = "1.16.0"
reqwest = { version = "0.12.2" }

[profile.release]
lto = true
strip = true
codegen-units = 1
