[package]
name = "relay-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
anydate = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }