[package]
name = "relay-http"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "macros","signal"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
tracing.workspace = true
metrics.workspace = true
percent-encoding.workspace = true
axum = { version = "0.7.4", default-features = false, features = ["http1", "http2", "json","matched-path","original-uri","query","tokio","tower-log"] }
tower-http = { version = "0.5.2", features = ["trace"] }
uuid = { workspace = true, features = ["v4"] }
relay-postgres = { version = "*", path="../relay-postgres"}
reqwest = "0.11.24"

[dev-dependencies]
portpicker = "0.1.1"
chrono.workspace = true
relay-client = { version = "*", path="../relay-client"}
reqwest = { version = "0.11.24", features = ["rustls-tls", "json"] }