[package]
name = "relay-postgres"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["raw_value"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.11.0"
pg_interval = "0.4.2"
tokio-stream = "0.1.14"
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time","macros"] }
tokio-postgres-rustls = "0.10.0"
rustls = { version = "0.21.8", default-features = false, features = ["tls12", "dangerous_configuration"] }
webpki-roots = "0.25.2"
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
