[package]
name = "relay"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
relay-http = { version = "*", path = "../relay-http", optional = true}
relay-postgres = { version = "*", path = "../relay-postgres", optional = true}
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["smallvec", "fmt", "env-filter", "tracing-log", "std"] }
metrics-exporter-prometheus = { version = "0.12.1", optional = true }
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time","macros"] }
metrics-util.workspace = true
metrics.workspace = true
tracing.workspace = true
tracing-appender = "0.2.2"


[features]
default = ["frontend-http", "backend-postgres"]
metrics-prometheus = ["metrics-exporter-prometheus"]
frontend-http = ["relay-http"]
backend-postgres = ["relay-postgres"]